@@ -1,3 +1,12 @@
+2024-08-20T01:25:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10463637493 # 393
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-20
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 58 102 / 60 104
+* notice: next accum: outdated-unq outdated-all / unq all: 59 103 / 60 104
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-05] / []
+
 2024-08-08T01:25:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10294326221 # 381
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-08
